--- a/index.html
+++ b/index.html
@@ -9,25 +9,66 @@
     .wrap{max-width:900px;margin:0 auto;padding:40px 18px}
     .card{background:#fff;border:1px solid #e5e7eb;border-radius:16px;padding:22px;box-shadow:0 10px 24px rgba(0,0,0,.04)}
     h1{margin:0 0 10px;font-size:26px}
+    h2{margin:22px 0 6px;font-size:18px}
     p{margin:10px 0;line-height:1.6;color:#334155}
+    ul{margin:10px 0 10px 18px;color:#334155}
+    li{margin:6px 0}
     .links a{display:inline-block;margin-right:14px;color:#0f172a;font-weight:700;text-decoration:none}
     .links a:hover{text-decoration:underline}
     .pill{display:inline-block;background:#eef2ff;color:#3730a3;border-radius:999px;padding:6px 10px;font-weight:800;font-size:12px}
-    .muted{font-size:12px;color:#64748b;margin-top:14px}
+    .muted{font-size:12px;color:#64748b;margin-top:18px}
   </style>
 </head>
 <body>
   <div class="wrap">
     <div class="card">
-      <span class="pill">Official OAuth App Info</span>
+      <span class="pill">Official OAuth App Homepage</span>
+
       <h1>Client Follow-Up Tracker</h1>
+
       <p>
-        This app helps users manage scheduled client follow-ups and send emails through their connected Gmail account.
+        <strong>Client Follow-Up Tracker</strong> is a productivity application designed to help users manage scheduled
+        client follow-ups and send reminder emails directly from their own Gmail account.
       </p>
+
+      <h2>What the app does</h2>
+      <ul>
+        <li>Helps users schedule and track client follow-ups</li>
+        <li>Allows users to send follow-up emails using Gmail</li>
+        <li>Prevents missed or delayed client communications</li>
+      </ul>
+
+      <h2>Why we request Google / Gmail access</h2>
+      <p>
+        This application uses Google OAuth and Gmail API access <strong>only</strong> to allow users to send emails
+        from within the app using their own Gmail account. Emails are sent only when the user initiates or schedules
+        a follow-up action.
+      </p>
+
+      <h2>How user data is handled</h2>
+      <ul>
+        <li>Email content is used only at the time an email is sent</li>
+        <li>The app does not read, scan, or analyze users’ inboxes</li>
+        <li>Email data is not stored after sending</li>
+        <li>User data is not sold, shared, or used for advertising</li>
+        <li>User data is not used for AI or machine learning training</li>
+      </ul>
+
+      <p>
+        Users can revoke Google account access at any time from their Google Account security settings.
+      </p>
+
+      <h2>Transparency & compliance</h2>
+      <p>
+        Client Follow-Up Tracker complies with the Google API Services User Data Policy and requests only the
+        minimum scopes required for core functionality.
+      </p>
+
       <p class="links">
         <a href="/privacy.html">Privacy Policy</a>
         <a href="/terms.html">Terms of Service</a>
       </p>
+
       <p class="muted">
         Contact: <a href="mailto:followuptracker.mail@gmail.com">followuptracker.mail@gmail.com</a>
       </p>
