--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
       </p>
 
       <p class="links">
-        <a href="/privacy.html">Privacy Policy</a>
-        <a href="/terms.html">Terms of Service</a>
+        <a href="https://chukwumaesomchi1-boop.github.io/followup-tracker-site/privacy.html">Privacy Policy</a>
+        <a href="https://chukwumaesomchi1-boop.github.io/followup-tracker-site/terms.html">Terms of Service</a>
       </p>
 
       <p class="muted">
